--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "steemdata.js",
   "dependencies": {
     "dsteem": "^0.8.7",
+    "event-stream": "^3.3.4",
     "mysql": "^2.15.0",
     "steem": "^0.7.1"
   },
